--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.4.2",
@@ -22,7 +23,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "victory": "^35.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
